--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Build Executable
         run: npm run build # Add your build script here
-        
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -36,6 +36,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/my-app.zip  # Adjust the path to your zip file
-          asset_name: my-app.zip  # Adjust the name of the asset
+          asset_path: dist/bundle.zip  # Adjust the path to your zip file
+          asset_name: pos-printer-server.zip  # Adjust the name of the asset
           asset_content_type: application/zip
