--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,22 +20,11 @@ jobs:
         run: npm run build # Add your build script here
 
       - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v1
         with:
+          files: dist/my-app-${{github.ref }}.zip
           tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
-
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
+          name: Release ${{ github.ref }}
+          body: Release ${{ github.ref }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/bundle.zip  # Adjust the path to your zip file
-          asset_name: pos-printer-server.zip  # Adjust the name of the asset
-          asset_content_type: application/zip
