--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
+    "adm-zip": "^0.5.12",
+    "archiver": "^7.0.1",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^12.0.2",
     "node-loader": "^2.0.0",
