--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "cors": "^2.8.5",
     "escpos": "^3.0.0-alpha.6",
     "escpos-usb": "^3.0.0-alpha.4",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "usb": "^2.12.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
